--- a/eclipse/telematicREfactor/.project
+++ b/eclipse/telematicREfactor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>avui1</name>
+	<name>telematicREfactor</name>
 	<comment></comment>
 	<projects>
 	</projects>
